# lauscher

./: .gitignore  .pylintrc  Readme.md  consistency_checks.ipynb  pyproject.toml  reference.npz  requirements.txt
.github/workflows/: ci-build.yml  ci-pylint.yml  ci-tests.yml
lauscher/: __main__.py  abstract.py  audiowaves.py  firing_probability.py  helpers.py  membranevelocity.py  spike_train.py
lauscher/transformations/: __init__.py  basilar_membrane.py  bushy_cell.py  hair_cell.py  peak_normalizer.py  rms_normalizer.py  wave2spike.py  window.py
test/: test_audio_wave.py  test_global_arguments.py  test_hanning_window.py  test_main.py  test_peak_normalizer.py  test_rms_normalizer.py  test_spiketrain.py
test/resources/: spoken_digit.flac
